refactor: cleaning to optimise